commit with first work on langage values

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 <body>
     <img class="fond" src="fond.jpg">
     <div id="menu-right-black"></div>
-    <div id="menu-right"> </div>
+    <div id="menu-right"> 
+        <ul>
+            <li><span>Changer de langue</span></li>
+            <li> <a href="English"><span>English</span></a></li>
+            <li><a href="Français"><span>Français</span></a></li>
+            <li><a href="Espagnol"><span>Espagnol</span></a></li>
+        </ul>
+    </div>
     <div id="menu-left"> </div>
     <div id='burger'>
         <span></span>
